<resources>
    <string name="app_name">THE DORM CONNECTION</string>
    <string name="logo_description">Logo The Dorm Connection</string>
    <string name="text_add_image">Add image</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_safe">Save</string>
    <string name="image_upload_successful">Image uploaded successfully</string>
    <string name="image_upload_not_successful">Image could not be uploaded</string>
    <string name="create_button">Create</string>
    <string name="join_button">Join</string>
    <string name="leave_button">Leave</string>
    <string name="update_button">Update</string>
    <string name="empty_field_error">Please fill in all fields</string>
    <string name="empty_all_field_error">Please fill field pairs</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="upload_image">Upload Image</string>
    <string name="continue_to_next_page">Continue ></string>
    <string name="back">&lt; back ></string>
    <string name="login_tagline">Login</string>
    <string name="sign_up_tagline">Sign up</string>
    <string name="sign_up_header">Welcome</string>
    <string name="login_header">Welcome</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_mail">Mail</string>
    <string name="new_to_the_dorm_connection">New to THE DORM CONNECTION?</string>
    <string name="already_a_member_question">Already a member?</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="login_error">Could not login, please try again.</string>
    <string name="sign_up_error">Could not sign up, please try again.</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="events">Events</string>
    <string name="events_tagline">Upcoming Events</string>
    <string name="events_header">Events</string>
    <string name="events_add_event_button">Create new event</string>
    <string name="events_add_tagline">Create an Event</string>
    <string name="event_description">Description</string>
    <string name="event_name">Name</string>
    <string name="event_date">Date</string>
    <string name="create_event_address">Street name</string>
    <string name="create_event_house_number">House number</string>
    <string name="create_event_city">City</string>
    <string name="create_event_general_information">General</string>
    <string name="create_event_address_information">Location</string>
    <string name="no_maps">Could not find Google Maps</string>
    <string name="detail_event_general">General</string>
    <string name="detail_event_location">Location</string>
    <string name="detail_event_join">Join</string>
    <string name="detail_event_address">Address</string>
    <plurals name="detail_event_attendees_text">
        <item quantity="zero">The event currently got no attendees.</item>
        <item quantity="one">The event currently got %d.</item>
        <item quantity="other">The event currently got %d attendees.</item>
    </plurals>
    <string name="detail_event_join_button">Join</string>
    <string name="detail_event_leave_button">Leave</string>
    <string name="detail_event_join_error">Could not join event, please try again.</string>
    <string name="detail_event_leave_error">Could not leave event, please try again.</string>
    <string name="detail_event_img_description">Image of the event</string>
    <string name="create_event_date">01-01-2022</string>
    <string name="delete_event_button_text">Delete</string>
    <string name="details_event_delete_successfull">Event successfully deleted</string>
    <string name="details_event_delete_error">Could not delete event, please try again.</string>
    <string name="create_event_image_section">Image</string>
    <string name="create_event_image_title">Image of the event</string>
    <string name="create_event_select_image_button">Select</string>
    <string name="create_event_required_field">All fields are required</string>
    <string name="create_event_date_past">Event dates cannot be in the past</string>
    <string name="create_event_event_created_message">Event created</string>
    <string name="create_event_event_not_created_message">Could not create event, please try again.</string>
    <string name="event_details_image_description">Picture of an event</string>
    <string name="event_details_location_button_description">Location of the event</string>
    <string name="rooms_add_tagline">Create a Room</string>
    <string name="rooms_tagline">Rooms for all to rent</string>
    <string name="rooms_header">Rooms</string>
    <string name="rooms_add_room_button">Add new room (admin only)</string>
    <string name="room_hint">Room name</string>
    <string name="room_description">Description</string>
    <string name="rooms">Rooms</string>
    <string name="room_address">Address</string>
    <string name="minimum_booking_time_pre">Min. booking time:</string>
    <string name="minimum_booking_time">Min. booking time  </string>
    <string name="maximum_booking_time">Max. booking time  </string>
    <string name="maximum_booking_time_pre">Max. booking time:</string>
    <string name="btn_book_room">Book room</string>
    <string name="btn_delete_room">Delete room</string>
    <string name="minimum_booking_time_invalid">Please use the suggested format for the minimum booking time!</string>
    <string name="detail_room_general">General</string>
    <string name="detail_room_location">Location</string>
    <string name="detail_room_book">Book</string>
    <string name="booking_time_incorrect">Please enter a valid time slot! Could not create the booking.</string>
    <string name="successful_booking">Booking of time slot successful!</string>
    <string name="booking_time_exceeds_maximum_booking_time">The chosen booking time exceeds the maximum allowed booking time! Could not create the booking.</string>
    <string name="booking_time_falls_below_the_minimum_booking_time">The chosen booking time falls below the minimum allowed booking time! Could not create the booking.</string>
    <string name="chosen_time_slot_has_already_been_booked">The chosen booking time has already been booked! Please refer to the listed available bookings times.</string>
    <string name="room_create_choose_image">Choose a picture</string>
    <string name="room_create_booking_times">Booking times</string>
    <string name="room_create_picture_description">Picture of the room</string>
    <string name="room_details_location_description">Place of a room</string>
    <string name="back_to_date">&lt; back to date</string>
    <string name="chosen_timeslot">Chosen Timeslot</string>
    <string name="available_timeslots">Available Timeslots</string>
    <string name="booking_for_the">Booking for the: </string>
    <string name="image_required">Image required!</string>
    <string name="btn_my_bookings">My Bookings</string>
    <string name="short_description">Short Descr. (max. 40 char.)</string>
    <string name="short_description_error">Please keep your short description to 40 characters or less.</string>
    <string name="extensive_description">Extensive Description</string>
    <string name="choose_starting_booking_time">Choose starting time</string>
    <string name="choose_ending_booking_time">Choose ending time</string>
    <string name="btn_edit_profile">EDIT PROFILE</string>
    <string name="btn_edit_wg">EDIT WG</string>
    <string name="btn_edit_profile_logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="you">You</string>
    <string name="profile_new_name">New name</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="profile_update_name_error">Could not update the user name, please try again later</string>
    <string name="profile_update_password_error">Could not update the password, please try again later</string>
    <string name="profile_update_name_success">Name successfully updated</string>
    <string name="profile_update_password_succeess">Password successfully updated</string>
    <string name="profile_update_password_match_error">The new passwords do not match</string>
    <string name="profile_update_password_incorrect_error">The current password is not correct</string>
    <string name="delete_account">Delete your account</string>
    <string name="btn_select_dorm">Choose your dorm</string>
    <string name="dorm">Dorm</string>
    <string name="btn_my_posts">My posts</string>
    <string name="edit_my_posts">Edit your posts</string>
    <string name="delete_user_error">Could not delete user, please try again later</string>
    <string name="delete_user_success">User successfully deleted</string>
    <string name="WG">WG</string>
    <string name="WG_invitation_code">Your WG invitation QR-Code</string>
    <string name="wg_choose_tagline">Edit your WG</string>
    <string name="wg_choose_header">WG</string>
    <string name="wg_choose_select_wg">Select existing</string>
    <string name="wg_choose_create_new">Create</string>
    <string name="wg_create_tagline">Create a WG</string>
    <string name="wg_create_name">Name</string>
    <string name="wg_create_motto">WG slogan</string>
    <string name="wg_join_tagline">Join a WG</string>
    <string name="wg_create_success">WG created</string>
    <string name="wg_create_failure">Could not create event, please try again later</string>
    <string name="wg_list_qr_code_button">Scan invitation QR-Code</string>
    <string name="wg_list_join_success">WG successfully joined</string>
    <string name="wg_list_join_error">Could not join WG, please try again later</string>
    <string name="wg_list_leave_success">WG successfully left</string>
    <string name="wg_list_leave_error">Could not leave WG, please try again later</string>
    <string name="wg_list_join_wg_error">Could not find any WG with the supplied QR-Code</string>
    <string name="wg_list_join_id_dorm_mismatch_error">The scanned WG is not part of your dorm</string>
    <string name="wg_detail_tagline">Invite others</string>
    <string name="wg_detail_invite_hint">Let other roommates scan this QR-Code to able to join</string>
    <string name="wg_detail_qr_code_description">QR-Code for joining a WG</string>
    <string name="wg_detail_load_error">Could not load wg, please try again later</string>
    <string name="wg_scanner_hint">Scan a WG invitation qr-code</string>
    <string name="wg_list_hint">Or select from the list below</string>
    <string name="pinboard">Pinboard</string>
    <string name="pinboard_tagline">News from your dorm</string>
    <string name="create_a_post">Create a post</string>
    <string name="post">Post</string>
    <string name="post_header">Headline</string>
    <string name="post_text">Text</string>
    <string name="post_keywords">Keywords</string>
    <string name="delete_post">Delete post</string>
    <string name="new_dorm">Could not find your dorm?</string>
    <string name="create_new_dorm">Click here to create your dorm</string>
    <string name="dorm_hint">Dorm name</string>
    <string name="dorms">Dorm</string>
    <string name="dorm_add_tagline">Create a new dorm</string>
    <string name="choose_my_dorm">Choose this as my dorm</string>
</resources>