<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileOptionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/eggshell">

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/you"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_delet_profile"
        android:layout_width="@dimen/btn_edit_profile_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/radical_red"
        android:text="@string/delete_account"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_profile_logout" />

    <Button
        android:id="@+id/btn_edit_wg"
        android:layout_width="@dimen/btn_edit_profile_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/patriarch"
        android:text="@string/btn_edit_wg"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_profile" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/setting"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_profile_logout"
        android:layout_width="@dimen/btn_edit_profile_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/patriarch"
        android:text="@string/btn_edit_profile_logout"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_wg" />

    <TextView
        android:id="@+id/tv_user_dorm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/dorm"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="@dimen/btn_edit_profile_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/patriarch"
        android:text="@string/btn_edit_profile"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_my_posts" />

    <Button
        android:id="@+id/btn_select_dorm"
        android:layout_width="@dimen/btn_edit_profile_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/patriarch"
        android:text="@string/btn_select_dorm"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_dorm" />

    <Button
        android:id="@+id/btn_my_posts"
        android:layout_width="@dimen/btn_edit_profile_width"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/patriarch"
        android:text="@string/btn_my_posts"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_select_dorm" />

    <ProgressBar
        android:id="@+id/deleteUserProgress"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>